--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 * {
   box-sizing: border-box;
 }
@@ -23,7 +25,7 @@ body {
 }
 main{
   width: 100%;
-  height: 100%;
+  height: 90%;
 }
 
 .slide-in-left-enter {
@@ -52,4 +54,7 @@ main{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.h-90{
+  height: 90%;
 }
