--- a/frontend/src/user/pages/Dashboard.css
+++ b/frontend/src/user/pages/Dashboard.css
@@ -1,29 +1,6 @@
-.dashboard{
-   height: 90%;
-   display: flex;
-   width: 100%;
-   
- 
-}
-.dashboard-container{
-   width: 68%;
-   background: white;
-   color: grey;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-.dashboard-details{
 
-}
-.doctor-wrapper{
-   width: 30%;
-   height: 100%;
-   display: flex;
-   align-self: center;
-}
-.doctor-wrapper img{
-  align-self: flex-end;
-  width: 100%;
-  
+.main-content{
+   height: 90%;
+    display: flex;
+    overflow: scroll;
 }
