--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,7 +7,7 @@
 }
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -16,14 +16,19 @@ body {
   height: 100vh;
   width: 100vw;
 }
-#root{
+#root {
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: end;
 }
-main{
+@media (orientation: portrait) {
+  #root {
+    transform: rotate(90deg);
+  }
+}
+main {
   width: 100%;
   height: 90%;
 }
@@ -55,6 +60,6 @@ main{
   justify-content: center;
   align-items: center;
 }
-.h-90{
+.h-90 {
   height: 90%;
 }
