--- a/frontend/src/user/components/Appointment.css
+++ b/frontend/src/user/components/Appointment.css
@@ -53,8 +53,16 @@
   width: 100%;
 }
 
+.place-list {
+  list-style: none;
+  margin: 1rem auto;
+  padding: 0;
+  width: 90%;
+  max-width: 40rem;
+}
+
 @media (min-width: 768px) {
   .place-item__image {
     height: 20rem;
-  } 
+  }
 }
