--- a/frontend/src/user/pages/Dashboard.css
+++ b/frontend/src/user/pages/Dashboard.css
@@ -5,11 +5,17 @@
   padding: 0.5rem 1.5rem;
 }
 .content {
-  /* overflow: scroll; */
+  overflow-y: scroll;
 }
 .fruitslice {
   background: url(../../shared/games/images/fruitslice.png);
-  width: 200px;
+  width: 100%;
   height: 150px;
   background-size: 100% 100%;
+}
+.dashboard{
+  width: 100%;
+}
+.content::-webkit-scrollbar{
+  display: none;
 }
